--- a/Sheaft.Web.Manage/Properties/launchSettings.json
+++ b/Sheaft.Web.Manage/Properties/launchSettings.json
@@ -17,6 +17,17 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
+    "manage-linux": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5008;http://localhost:5007",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation",
+        "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
+        "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/nono/.aspnet/https/localhost.pfx"
+      }
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
