--- a/Sheaft.Web.Api/Properties/launchSettings.json
+++ b/Sheaft.Web.Api/Properties/launchSettings.json
@@ -16,6 +16,15 @@
       },
       "applicationUrl": "https://localhost:5003;http://localhost:5002"
     },
+    "api-linux": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
+        "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/nono/.aspnet/https/localhost.pfx"
+      },
+      "applicationUrl": "https://localhost:5003;http://localhost:5002"
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
