--- a/Sheaft.Web.Signalr/Properties/launchSettings.json
+++ b/Sheaft.Web.Signalr/Properties/launchSettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
+  "iisS
+        "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
+        "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/nono/.aspnet/https/localhost.pfx"ettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
@@ -14,6 +16,15 @@
       "applicationUrl": "https://localhost:5010;http://localhost:5009",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "signalr-linux": {
+      "commandName": "Project",
+      "applicationUrl": "https://localhost:5010;http://localhost:5009",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
+        "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/nono/.aspnet/https/localhost.pfx"
       }
     },
     "Docker": {
