--- a/Sheaft.Web.Signalr/Properties/launchSettings.json
+++ b/Sheaft.Web.Signalr/Properties/launchSettings.json
@@ -1,8 +1,6 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisS
-        "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
-        "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/nono/.aspnet/https/localhost.pfx"ettings": {
+  "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
