--- a/Sheaft.Business/Sheaft.Business.csproj
+++ b/Sheaft.Business/Sheaft.Business.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="EPPlus" Version="4.5.3.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Helpers" />
+    </ItemGroup>
+
 </Project>
