--- a/Sheaft.Application/Sheaft.Application.csproj
+++ b/Sheaft.Application/Sheaft.Application.csproj
@@ -69,6 +69,9 @@
       <Content Include="Mailings\Templates\PurchaseOrderCreatedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Include="Mailings\Templates\PurchaseOrderExpiredEvent.cshtml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
       <Content Include="Mailings\Templates\PurchaseOrderReceivedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
@@ -81,7 +84,7 @@
       <Content Include="Mailings\Templates\PurchaseOrdersExportSucceededEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
-      <Content Include="Mailings\Templates\PurchaseOrderWithdrawnEvent.cshtml">
+      <Content Include="Mailings\Templates\PurchaseOrderWithdrawnedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <Content Include="Mailings\Templates\TransactionsExportFailedEvent.cshtml">
