--- a/Sheaft.Application/Sheaft.Application.csproj
+++ b/Sheaft.Application/Sheaft.Application.csproj
@@ -33,10 +33,10 @@
       <Content Include="Mailings\Templates\AgreementRefusedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
-      <Content Include="Mailings\Templates\PayinFailedEvent.cshtml">
+      <Content Include="Mailings\Templates\OrderRefusedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
-      <Content Include="Mailings\Templates\PayinSucceededEvent.cshtml">
+      <Content Include="Mailings\Templates\OrderConfirmedEvent.cshtml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <Content Include="Mailings\Templates\PreAuthorizationFailedEvent.cshtml">
