--- a/Sheaft.GraphQL/Sheaft.GraphQL.csproj
+++ b/Sheaft.GraphQL/Sheaft.GraphQL.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,9 +13,9 @@
       <PackageReference Include="HotChocolate.Types.Selections" Version="10.5.5" />
       <PackageReference Include="HotChocolate.Types.Sorting" Version="10.5.5" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.10" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.10" />
-      <PackageReference Include="NewRelic.Agent.Api" Version="8.39.1" />
+      <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="5.0.5" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+      <PackageReference Include="NewRelic.Agent.Api" Version="8.39.2" />
     </ItemGroup>
 
     <ItemGroup>
