--- a/Sheaft.Infrastructure.Tests/Sheaft.Infrastructure.Tests.csproj
+++ b/Sheaft.Infrastructure.Tests/Sheaft.Infrastructure.Tests.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Sheaft.Tests.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.5" />
     <PackageReference Include="Moq" Version="4.16.1" />
   </ItemGroup>
 
