--- a/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
+++ b/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
@@ -1,27 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.10" />
+      <PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.14" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.8.1" />
       <PackageReference Include="Dapper" Version="2.0.78" />
       <PackageReference Include="Hangfire.Core" Version="1.7.22" />
-      <PackageReference Include="IdentityModel" Version="4.5.0" />
+      <PackageReference Include="IdentityModel" Version="5.1.0" />
       <PackageReference Include="mangopay2-sdk" Version="2.3.0" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10">
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.10" />
-      <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.10" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="5.0.5" />
       <PackageReference Include="Powell.CouponCode" Version="1.0.3" />
       <PackageReference Include="RazorLight.NetCore3" Version="3.0.2" />
       <PackageReference Include="SixLabors.ImageSharp" Version="1.0.3" />
