--- a/Sheaft.Mediatr/Sheaft.Mediatr.csproj
+++ b/Sheaft.Mediatr/Sheaft.Mediatr.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,16 +13,16 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
       <PackageReference Include="EPPlus" Version="4.5.3.3" />
-      <PackageReference Include="FluentValidation" Version="9.5.0" />
+      <PackageReference Include="FluentValidation" Version="10.0.4" />
       <PackageReference Include="Hangfire.Core" Version="1.7.22" />
-      <PackageReference Include="IdentityModel" Version="4.5.0" />
-      <PackageReference Include="JWT" Version="7.3.1" />
+      <PackageReference Include="IdentityModel" Version="5.1.0" />
+      <PackageReference Include="JWT" Version="8.2.0" />
       <PackageReference Include="MediatR" Version="9.0.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="5.0.5" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
-      <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
