--- a/Sheaft.Mediatr/Sheaft.Mediatr.csproj
+++ b/Sheaft.Mediatr/Sheaft.Mediatr.csproj
@@ -26,4 +26,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Agreement\Queries" />
+    </ItemGroup>
+
 </Project>
