--- a/Sheaft.Web.Api/Sheaft.Web.Api.csproj
+++ b/Sheaft.Web.Api/Sheaft.Web.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.22" />
     <PackageReference Include="HotChocolate" Version="11.2.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="HotChocolate.Types.Scalars.Upload" Version="11.2.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
