Update - Optimisation des build docker

--- a/Sheaft.Web.Signalr/Dockerfile
+++ b/Sheaft.Web.Signalr/Dockerfile
@@ -15,6 +15,10 @@ COPY ["Sheaft.Application/Sheaft.Application.csproj", "Sheaft.Application/"]
 COPY ["Sheaft.Domain/Sheaft.Domain.csproj", "Sheaft.Domain/"]
 COPY ["Sheaft.Infrastructure/Sheaft.Infrastructure.csproj", "Sheaft.Infrastructure/"]
 COPY ["Sheaft.Localization/Sheaft.Localization.csproj", "Sheaft.Localization/"]
+COPY ["Sheaft.Mediatr/Sheaft.Mediatr.csproj", "Sheaft.Mediatr/"]
+COPY ["Sheaft.Business/Sheaft.Business.csproj", "Sheaft.Business/"]
+COPY ["Sheaft.Core/Sheaft.Core.csproj", "Sheaft.Core/"]
+COPY ["Sheaft.Options/Sheaft.Options.csproj", "Sheaft.Options/"]
 RUN dotnet restore "Sheaft.Web.Signalr/Sheaft.Web.Signalr.csproj"
 COPY . .
 WORKDIR "/src/Sheaft.Web.Signalr"
