New - Bascule en mode admin de la DB de Manage

--- a/Sheaft.Web.Manage/appsettings.json
+++ b/Sheaft.Web.Manage/appsettings.json
@@ -29,6 +29,7 @@
     },
     "bounces": "##REPLACE##"
   },
+  "IsAdminContext": true,
   "Psp": {
     "ApiUrl": "https://api.mangopay.com",
     "ClientId": "##REPLACE##",
