--- a/Sheaft.Business/Sheaft.Business.csproj
+++ b/Sheaft.Business/Sheaft.Business.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Sheaft.Application\Sheaft.Application.csproj" />
       <ProjectReference Include="..\Sheaft.Infrastructure\Sheaft.Infrastructure.csproj" />
+      <ProjectReference Include="..\Sheaft.Mailing\Sheaft.Mailing.csproj" />
       <ProjectReference Include="..\Sheaft.Options\Sheaft.Options.csproj" />
     </ItemGroup>
 
