Fix - Correction de null exception

--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Information",
         "Microsoft.Hosting": "Information",
-        "Sheaft": "Information"
+        "Sheaft": "Information",
+        "HotChocolate": "Information"
       }
     }
   },
