Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipeline-jobs.yml
+++ b/azure-pipeline-jobs.yml
@@ -24,4 +24,4 @@ stages:
       displayName: "Publish JOBS"
       inputs:
         PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Jobs/build$(Build.BuildId).zip'
-        artifactName: 'sheaft-JOBS'
+        artifactName: 'sheaft-jobs'
