Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipeline-manage.yml
+++ b/azure-pipeline-manage.yml
@@ -24,4 +24,4 @@ stages:
       displayName: "Publish MANAGE"
       inputs:
         PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Manage/build$(Build.BuildId).zip'
-        artifactName: 'sheaft-MANAGE'
+        artifactName: 'sheaft-manage'
