Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipeline-signalr.yml
+++ b/azure-pipeline-signalr.yml
@@ -24,4 +24,4 @@ stages:
       displayName: "Publish SIGNALR"
       inputs:
         PathtoPublish: '$(System.DefaultWorkingDirectory)/publish_output/Sheaft.Web.Signalr/build$(Build.BuildId).zip'
-        artifactName: 'sheaft-SIGNALR'
+        artifactName: 'sheaft-signalr'
