--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://sheaft.b2clogin.com",
+    "ClientId": "70d1fe5b-b1fa-4248-9ada-4596c468fe84",
+    "Domain": "identity.sheaft.com",
+    "SignedOutCallbackPath": "/signout/oidc",
+    "SignUpSignInPolicyId": "B2C_1_Signin_Signup",
+    "ResetPasswordPolicyId": "B2C_1_Password",
+    "EditProfilePolicyId": "B2C_1_Profile"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -41,18 +50,18 @@
   "AppDatabase": {
     "Name": "app",
     "Server": "localhost",
-    "User": "##REPLACE##",
-    "Password": "##REPLACE##",
-    "Port": 1433,
-    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
+    "User": "sa",
+    "Password": "root@1234",
+    "Port": 1434,
+    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
   },
   "JobsDatabase": {
     "Name": "app",
     "Server": "localhost",
-    "User": "##REPLACE##",
-    "Password": "##REPLACE##",
-    "Port": 1433,
-    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=True;User ID={3};Password={4};"
+    "User": "sa",
+    "Password": "root@1234",
+    "Port": 1434,
+    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
   },
   "Cache": {
     "TableName": "CachedItems",
@@ -76,8 +85,8 @@
     "Tables": {
     },
     "Suffix": "core.windows.net",
-    "Account": "##REPLACE##",
-    "Key": "##REPLACE##",
+    "Account": "test",
+    "Key": "123456789",
     "Url": "DefaultEndpointsProtocol=https;AccountName={0};AccountKey={1};EndpointSuffix={2}"
   },
   "Portal": {
