--- a/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
+++ b/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
@@ -32,6 +32,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>Sheaft.IntegrationTests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
       <Folder Include="Persistence\Migrations" />
     </ItemGroup>
 
