--- a/Sheaft.Api/appsettings.json
+++ b/Sheaft.Api/appsettings.json
@@ -26,7 +26,7 @@
       "Microsoft": "Warning"
     }
   },
-  "mailer": {
+  "Emailing": {
     "apiKey": "##REPLACE##",
     "sender": {
       "email": "##REPLACE##@##REPLACE##.##REPLACE##",
@@ -35,24 +35,22 @@
     "bounces": "##REPLACE##"
   },
   "Jobs": {
-    "CheckOrderExpiredFromMinutes": 1440,
-    "CheckNewPayinRefundsFromMinutes": 10080
   },
   "AppDatabase": {
     "Name": "app",
     "Server": "localhost",
     "User": "sa",
-    "Password": "root@1234",
+    "Password": "Route.1234",
     "Port": 1434,
-    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
+    "Url": "Data Source={0},{1};Initial Catalog={2};Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
   },
   "JobsDatabase": {
     "Name": "app",
     "Server": "localhost",
     "User": "sa",
-    "Password": "root@1234",
+    "Password": "Route.1234",
     "Port": 1434,
-    "Url": "Data Source={0},{1};Initial Catalog={2};Integrated Security=False;Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
+    "Url": "Data Source={0},{1};Initial Catalog={2};Persist Security Info=False;User ID={3};Password={4};TrustServerCertificate=True"
   },
   "Cors": {
     "origins": [
