--- a/Sheaft.Domain/Sheaft.Domain.csproj
+++ b/Sheaft.Domain/Sheaft.Domain.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\InvoiceManagement" />
     <Folder Include="Features\SupplierManagement\DomainServices" />
   </ItemGroup>
 
