--- a/Sheaft.Api/Sheaft.Api.csproj
+++ b/Sheaft.Api/Sheaft.Api.csproj
@@ -30,4 +30,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\InvoiceManagement" />
+  </ItemGroup>
 </Project>
