--- a/Sheaft.IntegrationTests/Sheaft.IntegrationTests.csproj
+++ b/Sheaft.IntegrationTests/Sheaft.IntegrationTests.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\Sheaft.Infrastructure\Sheaft.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\DocumentManagement" />
+    </ItemGroup>
+
 </Project>
