--- a/Sheaft.Application/Sheaft.Application.csproj
+++ b/Sheaft.Application/Sheaft.Application.csproj
@@ -25,4 +25,8 @@
     </AssemblyAttribute>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\DocumentManagement\Commands" />
+  </ItemGroup>
+
 </Project>
