--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -10,6 +10,7 @@
     "checkJs": true,
     "isolatedModules": true,
     "paths": {
+      "$routify/*": [".routify/*"],
       "$routes/*": ["src/routes/*"],
       "$components/*": ["src/components/*"],
       "$utils/*": ["src/utils/*"],
