--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -32,5 +32,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.8"
+  },
+  "dependencies": {
+    "@roxi/routify": "^3.0.0-next.90"
   }
 }
