--- a/Sheaft.Web.Portal/Sheaft.Web.Portal.csproj
+++ b/Sheaft.Web.Portal/Sheaft.Web.Portal.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="src\utils" />
       <Folder Include="wwwroot" />
       <Folder Include="public" />
       <Folder Include=".routify" />
