--- a/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
+++ b/Sheaft.Infrastructure/Sheaft.Infrastructure.csproj
@@ -26,6 +26,7 @@
       <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
       <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="6.0.4" />
       <PackageReference Include="MimeKit" Version="3.2.0" />
