--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -15,9 +15,12 @@
     "format": "prettier --write ./src/**/*.{js,svelte,html,ts}",
     "lint": "eslint ./src/**/*.{js,ts,svelte}",
     "lint:fix": "eslint --fix ./src/**/*.{js,ts,svelte}",
-    "prelint": "npm run format"
+    "prelint": "npm run format",
+    "dev:openapi": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts",
+    "build:openapi": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.43",
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^17.0.33",
@@ -45,9 +48,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@roxi/routify": "^2.18.5",
-    "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
+    "openapi-client-axios": "^5.1.2",
     "qs": "^6.10.3",
     "svelte-fa": "^2.4.0",
     "svelte-local-storage-store": "^0.2.6"
