--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -1,28 +1,35 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "removeComments": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "ES6",
-    "useDefineForClassFields": true,
     "module": "ES6",
-    "resolveJsonModule": true,
-    "baseUrl": ".",
-    "allowJs": true,
-    "checkJs": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "importHelpers": true,
+    "moduleResolution": "node",
     "isolatedModules": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
     "paths": {
-      "$routify/*": [".routify/*"],
-      "$pages/*": ["src/pages/*"],
-      "$components/*": ["src/components/*"],
-      "$utils/*": ["src/utils/*"],
-      "$stores/*": ["src/stores/*"],
-      "$assets/*": ["src/assets/*"],
-      "$configs/*": ["src/configs/*"],
-      "$styles/*": ["src/styles/*"],
-      "$settings/*": ["src/settings/*"],
-      "$types/*": ["src/types/*"],
-      "$enums/*": ["src/enums/*"]
-    }
+      "$routify/*": ["./routify/*"],
+      "$pages/*": ["./src/pages/*"],
+      "$components/*": ["./src/components/*"],
+      "$utils/*": ["./src/utils/*"],
+      "$stores/*": ["./src/stores/*"],
+      "$assets/*": ["./src/assets/*"],
+      "$configs/*": ["./src/configs/*"],
+      "$styles/*": ["./src/styles/*"],
+      "$settings/*": ["./src/settings/*"],
+      "$types/*": ["./src/types/*"],
+      "$enums/*": ["./src/enums/*"]
+    },
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.cjs", "src/**/*.svelte"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["vite.config.ts", "./src/**/*.d.ts", "./src/**/*.ts", "./src/**/*.svelte"],
+  "exclude": ["node_modules/*"],
 }
