--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -2,7 +2,7 @@
   "name": "sheaft",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "run-p dev:*",
     "dev:routify": "routify",
@@ -16,10 +16,12 @@
     "lint": "eslint ./src/**/*.{js,ts,svelte}",
     "lint:fix": "eslint --fix ./src/**/*.{js,ts,svelte}",
     "prelint": "npm run format",
-    "dev:openapi": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts",
-    "build:openapi": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts"
+    "dev:types": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts",
+    "build:types": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\types\\api.d.ts"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.43",
     "@tsconfig/svelte": "^3.0.0",
@@ -48,6 +50,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@roxi/routify": "^2.18.5",
+    "axios": "^0.25.0",
+    "form-data": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
     "openapi-client-axios": "^5.1.2",
